--- a/aws/predefined/eks/main.tf.liquid
+++ b/aws/predefined/eks/main.tf.liquid
@@ -9,14 +9,14 @@ terraform {
  }
 
 module "vpc" {
-    source = "../modules/vpc"
+    source = "./modules/vpc"
     name = "${ var.project_name }-${ var.environment }-vpc"
     environment = "${ var.environment }"
     cidr = "${ var.vpc_cidr }"
 }
 
 module "eks" {
-    source                  = "../modules/eks-nodegroup"
+    source                  = "./modules/eks-fargate"
     name                    = "${ var.project_name }"
     environment             = "${ var.environment }"
     vpc_id                  = module.vpc.id
