--- a/aws/predefined/submodule/acm-module/main.tf.liquid
+++ b/aws/predefined/submodule/acm-module/main.tf.liquid
@@ -12,7 +12,7 @@ data "aws_route53_zone" "route53_zone" {
   name = var.domain_name
 }
 module "acm" {
-    source = "../../../modules/acm"
+    source = "./modules/acm"
     name = "${ var.project_name }"
     environment = "${ var.environment }"
     domain_name = var.domain_name
