--- a/aws/predefined/submodule/vpc-module/main.tf.liquid
+++ b/aws/predefined/submodule/vpc-module/main.tf.liquid
@@ -8,7 +8,7 @@ terraform {
 }
 
 module "vpc" {
-    source = "../../../modules/vpc"
+    source = "./modules/vpc"
     name = "${ var.project_name }-${ var.environment }-vpc"
     environment = "${ var.environment }"
 }
