--- a/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
@@ -2,7 +2,7 @@ region = "{{ aws_region }}"
 project_id = "{{ project_id }}"
 project_name = "{{ project_name }}"
 environment = "{{ environment }}"
-vpc_cidr = "{{ aws_vpc_cidr }}"
+cidr = "{{ aws_vpc_cidr }}"
 source_code_repository = "{{ source_code_repository }}"
 cluster_version = "{{ aws_eks_cluster_version }}"
 {% if source_code_repository == 'github' %}
