--- a/aws/predefined/submodule/vpc-module/variables.tf.liquid
+++ b/aws/predefined/submodule/vpc-module/variables.tf.liquid
@@ -8,5 +8,8 @@ variable "environment" {
 
 variable "cidr" {
   description = "The CIDR block for the VPC."
-  default = "10.0.0.0/16"
+}
+
+variable "project_name" {
+  description = "The name of the project."
 }
