--- a/aws/predefined/submodule/vpc-module/variables.tf.liquid
+++ b/aws/predefined/submodule/vpc-module/variables.tf.liquid
@@ -1,5 +1,5 @@
-variable "name" {
-  description = "the name of your stack, e.g. \"demo\""
+variable "moduleName" {
+  description = "the name of your module"
 }
 
 variable "environment" {
