moduleName added in tfvars

--- a/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
@@ -2,3 +2,4 @@
 project_name = "{{ project_name }}"
 environment = "{{ environment }}"
 cidr = "{{ aws_vpc_cidr }}"
+moduleName = "{{ moduleName }}"
