--- a/aws/predefined/submodule/vpc-module/main.tf.liquid
+++ b/aws/predefined/submodule/vpc-module/main.tf.liquid
@@ -8,9 +8,11 @@ terraform {
 }
 
 module "vpc" {
+  
+  for_each   = toset(var.moduleNames) # Creates one module instance per moduleName
   source      = "./modules/vpc"
-  name        = "${var.project_name}-${var.environment}-${var.moduleName}-vpc"
+  name        = "${var.project_name}-${var.environment}-${each.value}-vpc"
   environment = var.environment
-  cidr        = var.cidr
+  cidr       = var.cidr
 
 }
