--- a/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
@@ -1,5 +1,5 @@
 
 project_name = "{{ project_name }}"
 environment = "{{ environment }}"
-cidr = "{{ aws_vpc_cidr }}"
+cidr = "10.0.0.0/16"
 moduleName = "{{ moduleName }}"
