--- a/aws/predefined/submodule/vpc-module/variables.tf.liquid
+++ b/aws/predefined/submodule/vpc-module/variables.tf.liquid
@@ -1,5 +1,7 @@
-variable "moduleName" {
-  description = "the name of your module"
+variable "moduleNames" {
+  description = "The list of module names for VPCs."
+  default = ["vpc1", "vpc2", "vpc3"]
+  type = list(string)
 }
 
 variable "environment" {
@@ -7,7 +9,8 @@ variable "environment" {
 }
 
 variable "cidr" {
-  description = "The CIDR block for the VPC."
+  description = "The list of CIDR blocks for each VPC."
+  default = "10.0.0.0/16"
 }
 
 variable "project_name" {
