--- a/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
@@ -2,4 +2,4 @@
 project_name = "{{ project_name }}"
 environment = "{{ environment }}"
 cidr = "10.0.0.0/16"
-moduleNames = "{{ moduleNames }}"
+moduleNames = ["{{ moduleNames }}"]
