--- a/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
@@ -1,5 +1,5 @@
 
 project_name = "{{ project_name }}"
 environment = "{{ environment }}"
-cidr = "10.0.0.0/16"
+cidr_blocks = ["10.0.0.0/16", "10.1.0.0/16"]
 moduleNames = ["{{ moduleNames }}"]
