--- a/aws/predefined/submodule/vpc-module/main.tf.liquid
+++ b/aws/predefined/submodule/vpc-module/main.tf.liquid
@@ -8,7 +8,7 @@ terraform {
 }
 
 module "vpc" {
-  for_each    = tomap({ for i, v in var.moduleNames : v => var.cidr_blocks[i] }) # Map each moduleName to its CIDR
+  for_each    = tomap({ for i, v in var.moduleName : v => var.cidr_blocks[i] }) # Map each moduleName to its CIDR
   source      = "./modules/vpc"
   name        = "${var.project_name}-${var.environment}-${each.key}-vpc"
   environment = var.environment
