--- a/aws/modules/vpc/variables.tf.liquid
+++ b/aws/modules/vpc/variables.tf.liquid
@@ -9,3 +9,42 @@ variable "environment" {
 variable "cidr" {
   description = "The CIDR block for the VPC."
 }
+
+variable "vpc_cidr" {
+  description = "The CIDR block for the VPC"
+}
+
+variable "vpc_public_subnets" {
+  description = "List of public subnets"
+  type        = list(string)
+}
+
+variable "vpc_private_subnets" {
+  description = "List of private subnets"
+  type        = list(string)
+}
+
+variable "vpc_database_subnets" {
+  description = "List of database subnets"
+  type        = list(string)
+}
+
+variable "rds_engine" {
+  description = "Database engine type (e.g., postgres, mysql)"
+  default     = "postgres"
+}
+
+variable "rds_instance_class" {
+  description = "RDS instance class"
+  default     = "db.t3.micro"
+}
+
+variable "rds_allocated_storage" {
+  description = "Initial RDS storage allocation"
+  default     = 20
+}
+
+variable "rds_max_allocated_storage" {
+  description = "Maximum RDS storage allocation"
+  default     = 100
+}
