--- a/aws/predefined/submodule/acm-module/variables.tf.liquid
+++ b/aws/predefined/submodule/acm-module/variables.tf.liquid
@@ -1,6 +1,6 @@
-variable "name" {
-    description = "the name of your stack, e.g. \"demo\""
-  }
+variable "project_name" {
+  description = "The name of the project."
+}
   
   variable "environment" {
     description = "the name of your environment, e.g. \"prod\""
@@ -10,3 +10,6 @@ variable "name" {
     description = "Domain name"
   }
   
+  variable "route53_zoneid" {
+    description = "route53 zone id"
+  }
