--- a/aws/predefined/submodule/acm-module/variables.tf.liquid
+++ b/aws/predefined/submodule/acm-module/variables.tf.liquid
@@ -8,6 +8,7 @@ variable "project_name" {
   
   variable "domain_name" {
     description = "Domain name"
+    type=list(string)
   }
   
   variable "route53_zoneid" {
