--- a/aws/predefined/grouping-templates/rds-vpc/main.tf.liquid
+++ b/aws/predefined/grouping-templates/rds-vpc/main.tf.liquid
@@ -9,7 +9,7 @@ terraform {
  }
 
 module "vpc" {
-  source      = "../modules/vpc"
+  source      = "./modules/vpc"
   name        = "${var.project_name}-${var.environment}"
   environment = var.environment
   cidr        = var.vpc_cidr
@@ -17,7 +17,7 @@ module "vpc" {
 }
 
 module "rds" {
-  source                  = "../modules/rds"
+  source                  = "./modules/rds"
   name                    = var.project_name
   environment             = var.environment
   region                  = var.region
