--- a/aws/predefined/grouping-templates/rds-vpc/main.tf.liquid
+++ b/aws/predefined/grouping-templates/rds-vpc/main.tf.liquid
@@ -23,6 +23,7 @@ module "rds" {
   region                  = var.region
   security_group_id       = module.vpc.default_security_group_id
   vpc_id                  = module.vpc.id
+  vpc_public_subnets      = module.vpc.public_subnets  
   vpc_private_subnets     = module.vpc.private_subnets
   vpc_database_subnets    = module.vpc.database_subnets
 }
