--- a/aws/predefined/submodule/rds-module/main.tf.liquid
+++ b/aws/predefined/submodule/rds-module/main.tf.liquid
@@ -1,6 +1,6 @@
 
 module "rds"{
-    source = "./modules-single/rds"  
+    source = "./single/rds"  
     name = "${ var.project_name }"
     environment = "${ var.environment }"
     region                 = var.region
