--- a/aws/predefined/submodule/rds-module/main.tf.liquid
+++ b/aws/predefined/submodule/rds-module/main.tf.liquid
@@ -3,6 +3,7 @@ module "rds"{
     source = "./modules/rds"  
     name = "${ var.project_name }"
     environment = "${ var.environment }"
+    moduleName = "${var.moduleName}"
     region                 = var.region
     vpc_id                 = module.vpc.id
     vpc_private_subnets    = module.vpc.private_subnets
