--- a/aws/predefined/submodule/rds-module/main.tf.liquid
+++ b/aws/predefined/submodule/rds-module/main.tf.liquid
@@ -3,11 +3,11 @@ module "rds"{
     source = "./modules/rds"  
     name = "${ var.project_name }"
     environment = "${ var.environment }"
-    moduleName = "${var.moduleName}"
+    moduleName = "${ var.moduleName }"
     region                 = var.region
-    vpc_id                 = module.vpc.id
-    vpc_private_subnets    = module.vpc.private_subnets
-    vpc_public_subnets     = module.vpc.public_subnets
-    vpc_database_subnets   = module.vpc.database_subnets
-    security_group_id      = module.vpc.default_security_group_id
+    vpc_id                 = module.vpc["${var.moduleName[0]}"].id
+    vpc_private_subnets    = module.vpc["${var.moduleName[0]}"].private_subnets
+    vpc_public_subnets     = module.vpc["${var.moduleName[0]}"].public_subnets
+    vpc_database_subnets   = module.vpc["${var.moduleName[0]}"].database_subnets
+    security_group_id      = module.vpc["${var.moduleName[0]}"].default_security_group_id
 }
