--- a/aws/predefined/grouping-templates/vpc-rds-nodegroup-ecr-ingress/terraform.tfvars.liquid
+++ b/aws/predefined/grouping-templates/vpc-rds-nodegroup-ecr-ingress/terraform.tfvars.liquid
@@ -4,4 +4,4 @@ project_name = "{{ project_name }}"
 environment = "{{ environment }}"
 vpc_cidr = "{{ aws_vpc_cidr }}"
 cluster_version = "{{ aws_eks_cluster_version }}"
-domain_name = "{{ domain }}"
+domain_name = "{{ domain_name }}"
