--- a/aws/predefined/grouping-templates/rds-vpc/main.tf.liquid
+++ b/aws/predefined/grouping-templates/rds-vpc/main.tf.liquid
@@ -26,5 +26,6 @@ module "rds" {
   vpc_public_subnets      = module.vpc.public_subnets  
   vpc_private_subnets     = module.vpc.private_subnets
   vpc_database_subnets    = module.vpc.database_subnets
+  depends_on              = [ module.vpc ]
 }
 
