--- a/aws/predefined/submodule/github-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/github-module/terraform.tfvars.liquid
@@ -2,11 +2,29 @@ region = "{{ aws_region }}"
 project_id = "{{ project_id }}"
 project_name = "{{ project_name }}"
 source_code_repository = "{{ source_code_repository }}"
+
 {% if source_code_repository == 'github' %}
 github_access_token = "{{ github_access_token }}"
 github_owner = "{{ github_owner }}"
-appType = ["{{ frontend_app_type }}", "{{ backend_app_type }}", "keycloak-service", "auth-service"]
+
+{% assign app_types = "" %}
+
+{% if service_type == 'frontend-service' %}
+{% assign app_types = app_types | append: '["' | append: frontend_app_type | append: '"]' %}
 {% endif %}
+
+{% if service_type == 'backend-service' %}
+{% assign app_types = app_types | append: '["' | append: backend_app_type | append: '"]' %}
+{% endif %}
+
+{% if service_type != 'frontend-service' or service_type == 'backend-service' %}
+{% assign app_types = app_types | append: '["' | append: service_type | append: '"]' %}
+{% endif %}
+
+appType = {{ app_types }}
+
+{% endif %}
+
 {% if domain %}
 domain_name = "{{ domain }}"
 {% endif %}
