--- a/aws/predefined/submodule/github-module/backend-config.tfvars.liquid
+++ b/aws/predefined/submodule/github-module/backend-config.tfvars.liquid
@@ -1,5 +1,5 @@
 bucket         = "{{ project_id }}-tfstate"
 encrypt        = true
-key            = "{{ project_name }}-{{ environment }}.tfstate"
+key            = "{{ project_name }}-github.tfstate"
 region         = "{{ aws_region }}"
 dynamodb_table = "{{ project_id }}-tfstate-lock"
