--- a/common-modules/code-repository/github/variables.tf.liquid
+++ b/common-modules/code-repository/github/variables.tf.liquid
@@ -10,6 +10,10 @@ variable "name" {
   description = "Name of the product"
 }
 
+variable "environment" {
+  description = "Environment"
+}
+
 variable "appType" {
   description = "The name of your repo"
 }
