--- a/common-modules/code-repository/github/variables.tf.liquid
+++ b/common-modules/code-repository/github/variables.tf.liquid
@@ -10,6 +10,12 @@ variable "name" {
   description = "Name of the product"
 }
 
+{% if command == "create" %}
+variable "environment" {
+  description = "Environment"
+}
+{% endif %}
+
 variable "appType" {
   description = "The name of your repo"
 }
