--- a/aws/predefined/submodule/github-module/main.tf.liquid
+++ b/aws/predefined/submodule/github-module/main.tf.liquid
@@ -12,8 +12,8 @@ module "repository" {
      name = "${ var.project_name }"
      appType = "${ var.appType }"
      github_token = "${ var.github_access_token }"
-     github_owner = "${ var.github_owner }"
-}
+     github_owner = "${ var.github_owner }" }
+
 
 locals {
    repositories = [
@@ -21,5 +21,5 @@ locals {
        appType = repo_name
        description     = "Repository for ${repo_name}"
      }
-   ]
- }
+   ] }
+ 
