--- a/aws/predefined/submodule/github-module/main.tf.liquid
+++ b/aws/predefined/submodule/github-module/main.tf.liquid
@@ -12,13 +12,14 @@ module "repository" {
      name = "${ var.project_name }"
      appType = "${ var.appType }"
      github_token = "${ var.github_access_token }"
-     github_owner = "${ var.github_owner }" }
-
+     github_owner = "${ var.github_owner }"
+}
 
 locals {
    repositories = [
      for repo_name in var.appType : {
        appType = repo_name
-       description     = "Repository for ${repo_name}" }
-   ] }
- 
+       description     = "Repository for ${repo_name}"
+     }
+   ]
+ }
