--- a/aws/predefined/submodule/github-module/variables.tf.liquid
+++ b/aws/predefined/submodule/github-module/variables.tf.liquid
@@ -1,6 +1,8 @@
 variable "project_id" { description = "The project id" }
 
-variable "project_name" { description = "The project name" }
+variable "project_name" {
+  description = "The name of the project."
+}
 
 variable "source_code_repository" { description = "The source code repository" }
 
