--- a/aws/predefined/submodule/github-module/main.tf.liquid
+++ b/aws/predefined/submodule/github-module/main.tf.liquid
@@ -19,5 +19,7 @@ locals {
    repositories = [
      for repo_name in var.appType : {
        appType = repo_name
-       description     = "Repository for ${repo_name}" }
-   ]   }
+       description     = "Repository for ${repo_name}"
+     }
+   ]
+}
