--- a/aws/predefined/submodule/github-module/variables.tf.liquid
+++ b/aws/predefined/submodule/github-module/variables.tf.liquid
@@ -3,7 +3,7 @@ variable "project_id" {
 }
 
 variable "project_name" {
-    description = "The project name"
+    description = "The name of the project."
 }
 
 variable "source_code_repository" {
