--- a/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
@@ -1,4 +1,5 @@
-
+region = "{{ aws_region }}"
+project_id = "{{ project_id }}"
 project_name = "{{ project_name }}"
 environment = "{{ environment }}"
 cidr_blocks = [{% for block in cidr_blocks %}"{{ block }}"{% if forloop.last == false %}, {% endif %}{% endfor %}]
