--- a/aws/ansible/environments/group_vars/all.yml.liquid
+++ b/aws/ansible/environments/group_vars/all.yml.liquid
@@ -72,6 +72,7 @@ frontend_app: {{ project_name }}-{{ frontend_app_type }}-app
 backend_app: {{ project_name }}-{{ backend_app_type }}-app
 keycloak_app: {{ project_name }}-keycloak-service-app
 auth_service: {{ project_name }}-auth-service-app
+gen_ai_app:{{ project_name }}-gen-ai-service-app
 argocd_namespace: {{ project_name }}-{{ environment }}-argocd
 
 run_as_uid: 1001
