--- a/aws/predefined/submodule/github-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/github-module/terraform.tfvars.liquid
@@ -6,7 +6,7 @@ source_code_repository = "{{ source_code_repository }}"
 {% if source_code_repository == 'github' %}
 github_access_token = "{{ github_access_token }}"
 github_owner = "{{ github_owner }}"
-appType = [{% for service in service_names %}"{{ service }}"{% if forloop.last == false %}, {% endif %}{% endfor %}]
+appType = [{% for service in services %}"{{ service }}"{% if forloop.last == false %}, {% endif %}{% endfor %}]
 {% endif %}
 
 {% if domain %}
