--- a/common-modules/code-repository/github/main.tf.liquid
+++ b/common-modules/code-repository/github/main.tf.liquid
@@ -1,7 +1,7 @@
 {% if command == "new" %}
   {% assign app_list = appType %}
 {% elsif command == "create" %}
-  {% assign app_list = service_names %}
+  {% assign app_list = appName %}
 {% endif %}
 
 provider "github" {
