--- a/common-modules/common/providers.tf.liquid
+++ b/common-modules/common/providers.tf.liquid
@@ -8,7 +8,7 @@ terraform {
         }
         helm = {
             source  = "hashicorp/helm"
-            version = "{{ helm_provider_version }}"
+            version = 2.17.0
         }
         {% endif %}
 
