--- a/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
+++ b/aws/predefined/submodule/vpc-module/terraform.tfvars.liquid
@@ -2,4 +2,4 @@
 project_name = "{{ project_name }}"
 environment = "{{ environment }}"
 cidr_blocks = [{% for block in cidr_blocks %}"{{ block }}"{% if forloop.last == false %}, {% endif %}{% endfor %}]
-moduleName = [{% for name in moduleName %}"{{ name }}"{% if forloop.last == false %}, {% endif %}{% endfor %}]
+moduleName = [{% for name in vpcNames %}"{{ name }}"{% if forloop.last == false %}, {% endif %}{% endfor %}]
