--- a/azure/modules/kubernetes/aks/terraform.tfvars.liquid
+++ b/azure/modules/kubernetes/aks/terraform.tfvars.liquid
@@ -1,6 +1,6 @@
-Location =  "{{ location }}"
+location =  "{{ location }}"
 project_name  =  "{{ project_name }}"
-Environment  =  "{{ environment }}"
+environment  =  "{{ environment }}"
 common_resource_group_name  =  "{{ common_resource_group_name}}"
 resource_group_name = "{{resource_group_name}}"
 aks_subnet_id  =  "{{aks_subnet_id}}"
